--- a/Dashboard/src/index.css
+++ b/Dashboard/src/index.css
@@ -1,5 +1,10 @@
 @import "tailwindcss"
 
+/* html {
+  scroll-behavior: smooth;
+} */
+
+
 
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
